@@ -28,7 +28,7 @@ from AccessControl import ClassSecurityInfo
 
 from OFS.Folder import Folder
 
-from Products.CMFCore.CMFCorePermissions import ManagePortal
+from Products.CMFCore.permissions import ManagePortal
 
 from Products.CPSSchemas.FolderWithPrefixedIds import FolderWithPrefixedIds
 from Products.CPSSchemas.Field import FieldRegistry
