@@ -25,7 +25,7 @@ from AccessControl import ClassSecurityInfo
 from OFS.Folder import Folder
 
 from Products.CMFCore.utils import UniqueObject
-from Products.CMFCore.CMFCorePermissions import ManagePortal
+from Products.CMFCore.permissions import ManagePortal
 
 class VocabulariesTool(UniqueObject, Folder):
     """Vocabularies Tool
