@@ -32,7 +32,7 @@ from AccessControl import Unauthorized
 from Persistence import Persistent
 from Acquisition import Implicit
 
-from Products.CMFCore.CMFCorePermissions import View, ManagePortal
+from Products.CMFCore.permissions import View, ManagePortal
 from Products.CMFCore.utils import SimpleItemWithProperties, getToolByName
 
 from Products.CPSSchemas.PropertiesPostProcessor import PropertiesPostProcessor
