@@ -27,7 +27,7 @@ from AccessControl import ClassSecurityInfo
 
 from OFS.Folder import Folder
 
-from Products.CMFCore.CMFCorePermissions import ManagePortal
+from Products.CMFCore.permissions import ManagePortal
 from Products.CMFCore.utils import UniqueObject
 
 
